{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 579,
  "lineage": "d2bf4b8d-47ea-e857-d8d2-9d527d76fdd6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "arm_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041cd27d5f9f816b8",
            "domain": "vpc",
            "id": "eipalloc-041cd27d5f9f816b8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-229-52-169.compute-1.amazonaws.com",
            "public_ip": "3.229.52.169",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Project": "ARMProjekatTim10"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "arm_server_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0695f2f761eeb04e6",
            "arn": "arn:aws:ec2:us-east-1:731785252412:instance/i-02cf19c65de6e76d5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-02cf19c65de6e76d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010a3ffd2e9dcfc6e",
            "private_dns": "ip-192-168-1-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:731785252412:key/4f597b27-e29d-453e-bf9f-3403f968f9ab",
                "throughput": 0,
                "volume_id": "vol-0e6c272d836fcfb5a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d78577eed77edca5",
            "tags": {
              "Name": "Tim 10 PrivateServer"
            },
            "tags_all": {
              "Name": "Tim 10 PrivateServer",
              "Project": "ARMProjekatTim10"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de56466c34e89d6d"
            ]
          },
          "dependencies": [
            "aws_ecs_cluster.arm_ecs_cluster",
            "aws_kms_key.ebs_encryption_key",
            "aws_security_group.arm_security_group",
            "aws_subnet.arm_subnet_private",
            "aws_vpc.arm_vpc",
            "data.aws_ami.ecs_optimized_amazon_linux_ami",
            "data.aws_iam_instance_profile.lab_instance_profile",
            "data.aws_iam_policy_document.ebs_encryption_kms_key_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arm_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731785252412:internet-gateway/igw-0b8e442160481f600",
            "id": "igw-0b8e442160481f600",
            "owner_id": "731785252412",
            "tags_all": {
              "Project": "ARMProjekatTim10"
            },
            "vpc_id": "vpc-0474c661c595a72a9"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arm_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731785252412:route-table/rtb-0702212d4ff60b837",
            "id": "rtb-0702212d4ff60b837",
            "owner_id": "731785252412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8e442160481f600",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Project": "ARMProjekatTim10"
            },
            "timeouts": null,
            "vpc_id": "vpc-0474c661c595a72a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arm_rt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffb1b8d1b5d74b52",
            "route_table_id": "rtb-0702212d4ff60b837",
            "subnet_id": "subnet-0830febdb38742818"
          },
          "dependencies": [
            "aws_internet_gateway.arm_igw",
            "aws_route_table.arm_public_rt",
            "aws_subnet.arm_subnet_public",
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731785252412:security-group/sg-0de56466c34e89d6d",
            "description": "Security group for ARM EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP egress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS egress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic in security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0de56466c34e89d6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic in security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "arm_security_group",
            "name_prefix": "",
            "owner_id": "731785252412",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Project": "ARMProjekatTim10"
            },
            "timeouts": null,
            "vpc_id": "vpc-0474c661c595a72a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arm_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731785252412:subnet/subnet-0d78577eed77edca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d78577eed77edca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "731785252412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tim10 Private Subnet"
            },
            "tags_all": {
              "Name": "Tim10 Private Subnet",
              "Project": "ARMProjekatTim10"
            },
            "vpc_id": "vpc-0474c661c595a72a9"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arm_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731785252412:subnet/subnet-0830febdb38742818",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.1.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0830febdb38742818",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "731785252412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tim10 Public Subnet"
            },
            "tags_all": {
              "Name": "Tim10 Public Subnet",
              "Project": "ARMProjekatTim10"
            },
            "vpc_id": "vpc-0474c661c595a72a9"
          },
          "dependencies": [
            "aws_vpc.arm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:731785252412:vpc/vpc-0474c661c595a72a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/26",
            "default_network_acl_id": "acl-059c408ea83eaf67b",
            "default_route_table_id": "rtb-0846f181c423c9af8",
            "default_security_group_id": "sg-0e6a3bef98e58f1a7",
            "dhcp_options_id": "dopt-04e43bb8d69607820",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0474c661c595a72a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0846f181c423c9af8",
            "owner_id": "731785252412",
            "tags": {
              "Name": "Tim10 Vpc"
            },
            "tags_all": {
              "Name": "Tim10 Vpc",
              "Project": "ARMProjekatTim10"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}